Revert "Update 제안서 cc43f001ba6d4bf5b53ac8149978e7ca.md"
This reverts commit 173426afae63beee5da7ccc927342b6a6a0a3fc8.

--- a/제안서/제안서 cc43f001ba6d4bf5b53ac8149978e7ca.md
+++ b/제안서/제안서 cc43f001ba6d4bf5b53ac8149978e7ca.md
@@ -2,6 +2,7 @@
 
 [대본](%E1%84%8C%E1%85%A6%E1%84%8B%E1%85%A1%E1%86%AB%E1%84%89%E1%85%A5%20cc43f001ba6d4bf5b53ac8149978e7ca/%E1%84%83%E1%85%A2%E1%84%87%E1%85%A9%E1%86%AB%20568736a4ff514f24be191cb651c8775e.md)
 
+[Free Process infographics for Google Slides and PowerPoint](https://slidesgo.com/theme/process-diagrams#position-173&results-10155)
 
 - 프로젝트 개요 (왜 우리가 이 주제를 선택했는가)
     - 배경: 우리는 이 주제를 선택한 이유가 있습니다.
